- update new version, filemanager, bugfix and code clean