@@ -5,7 +5,7 @@
  * @link https://www.hw-softwareentwicklung.de
  * @author Stefan Werfling <stefan.werfling-AT-hw-softwareentwicklung.de>
  * @package jegroupware
- * @copyright (c) 2012-15 by Stefan Werfling <stefan.werfling-AT-hw-softwareentwicklung.de>
+ * @copyright (c) 2012-16 by Stefan Werfling <stefan.werfling-AT-hw-softwareentwicklung.de>
  * @license http://opensource.org/licenses/GPL-2.0 GPL2 - GNU General Public License, version 2 (GPL-2.0)
  * @version 14.2.6
  */
@@ -22,8 +22,8 @@ import java.util.ArrayList;
 import javax.net.ssl.TrustManager;
 import javax.net.ssl.TrustManagerFactory;
 import javax.net.ssl.X509TrustManager;
-import sun.misc.BASE64Encoder;
-import sun.security.provider.X509Factory;
+import java.util.Base64;
+import java.util.Base64.Encoder;
 
 /**
  * EgroupwareHttpsTrustManager
@@ -51,17 +51,15 @@ public class EgroupwareHttpsTrustManager implements javax.net.ssl.X509TrustManag
 
     /**
      * checkClientTrusted
-     *
      * @param xcs
      * @param string
      * @throws CertificateException
      */
     public void checkClientTrusted(X509Certificate[] xcs, String string) throws CertificateException {
-	}
+    }
 
     /**
      * checkServerTrusted
-     *
      * @param xcs
      * @param string
      * @throws CertificateException
@@ -71,22 +69,22 @@ public class EgroupwareHttpsTrustManager implements javax.net.ssl.X509TrustManag
             X509Certificate cs = xcs[i];
 
             if( this.acceptCerts.indexOf(cs) != -1 ) {
-				return;
-			}
+                return;
+            }
 
             try {
                 cs.checkValidity();
 
                 TrustManagerFactory tmf = TrustManagerFactory.getInstance(
-					TrustManagerFactory.getDefaultAlgorithm());
+                    TrustManagerFactory.getDefaultAlgorithm());
 
                 tmf.init((KeyStore)null);
-				TrustManager[] tms = tmf.getTrustManagers();
+                TrustManager[] tms = tmf.getTrustManagers();
 
                 if( tms.length > 0 ) {
-					X509TrustManager x509TrustManager = (X509TrustManager) tms[0];
-					x509TrustManager.checkServerTrusted(xcs, string);
-				}
+                    X509TrustManager x509TrustManager = (X509TrustManager) tms[0];
+                    x509TrustManager.checkServerTrusted(xcs, string);
+                }
             }
             catch( Exception exp ) {
                 if( this._acceptUnsafe ) {
@@ -108,43 +106,39 @@ public class EgroupwareHttpsTrustManager implements javax.net.ssl.X509TrustManag
     }
 
     /**
-	 * getAcceptedCerts
-	 * return all accepted Certs
-	 *
-	 * @return String Certs in PEM
-	 * @throws CertificateEncodingException
-	 */
-	public String getAcceptedCerts() throws CertificateEncodingException {
-		String certs = "";
+     * getAcceptedCerts
+     * return all accepted Certs
+     * @return String Certs in PEM
+     * @throws CertificateEncodingException
+     */
+    public String getAcceptedCerts() throws CertificateEncodingException {
+        String certs = "";
 
-		for( int i=0; i<this.acceptCerts.size(); i++ ) {
-			X509Certificate cert = this.acceptCerts.get(i);
+        for( X509Certificate cert : this.acceptCerts ) {
+			Encoder encoder = Base64.getEncoder();
+            certs += "-----BEGIN CERTIFICATE-----";
+            certs += encoder.encode(cert.getEncoded());
+            certs += "-----END CERTIFICATE-----";
+            certs += "\r\n\r\n";
+        }
 
-			BASE64Encoder encoder = new BASE64Encoder();
-			certs += X509Factory.BEGIN_CERT;
-			certs += encoder.encodeBuffer(cert.getEncoded());
-			certs += X509Factory.END_CERT;
-			certs += "\r\n\r\n";
-		}
-
-		return certs;
-	}
+        return certs;
+    }
 
     /**
      * setAcceptedCerts
-     *
      * @param strcerts
      * @throws CertificateException
      */
-	public void setAcceptedCerts(String strcerts) throws CertificateException {
-		String[] tmp = strcerts.split("\r\n\r\n");
+    public void setAcceptedCerts(String strcerts) throws CertificateException {
+        String[] tmp = strcerts.split("\r\n\r\n");
 
-		for( int i=0; i<tmp.length; i++ ) {
-			CertificateFactory cf = CertificateFactory.getInstance("X.509");
-			InputStream is = new ByteArrayInputStream(tmp[i].getBytes());
-			X509Certificate cert = (X509Certificate) cf.generateCertificate(is);
+        for( String tmp1 : tmp ) {
+            CertificateFactory cf = CertificateFactory.getInstance("X.509");
+            InputStream is = new ByteArrayInputStream(tmp1.getBytes());
+            X509Certificate cert = (X509Certificate) cf.generateCertificate(is);
 
-			this.acceptCerts.add(cert);
-		}
-	}
+            this.acceptCerts.add(cert);
+        }
+    }
 }
